appId: me.ibrahimsn.app
---
- launchApp
- assertVisible: "Dashboard Fragment"
- tapOn: "Leaderboard"
- assertVisible: "Leaderboard Fragment"
- tapOn: "Store"
- assertVisible: "Store Fragment"
- tapOn: "Profile"
- assertVisible: "Profile Fragment"
- tapOn: "Dashboard"
- assertVisible: "Dashboard Fragment"
