appId: me.ibrahimsn.app
---
- launchApp
- tapOn: "View Demo"
- assertVisible: "Dashboard Fragment"
- tapOn:
    id: "textView"
- assertVisible: "Store Fragment"
