appId: me.ibrahimsn.app
---
- launchApp
- tapOn: "View Demo"
- assertVisible:
    id: "toolbar"
- assertVisible: "Dashboard Fragment"
