appId: me.ibrahimsn.app
---
- launchApp
- tapOn: "View Demo"
- assertVisible: "Dashboard Fragment"
- tapOn: "Leaderboard"
- assertVisible: "Leaderboard Fragment"
- tapOn: "^Store(, has notification)?$"
- assertVisible: "Store Fragment"
- tapOn: "Profile"
- assertVisible: "Profile Fragment"
- tapOn: "^Dashboard(, has notification)?$"
- assertVisible: "Dashboard Fragment"
