appId: me.ibrahimsn.app
---
- launchApp
- tapOn: "View Demo"
- assertVisible:
    id: "toolbar"
- tapOn: "More options"
- tapOn: "Compose Demo"
- assertVisible: "View Demo"
